Bug#51347: assertion with show create table + partition by columns on decimal column

The problem was that there was no check to disallow DECIMAL
columns in the code (it was accepted as if it was INTEGER).

Solution was to correctly disallow DECIMAL columns in
COLUMNS partitioning. As documented.

mysql-test/r/partition_column.result:
  Bug#51347: assertion with show create table + partition by columns
  on decimal column
  
  updated test result
mysql-test/t/partition_column.test:
  Bug#51347: assertion with show create table + partition by columns
  on decimal column
  
  Added test to verify column types that is not supported
sql/sql_partition.cc:
  Bug#51347: assertion with show create table + partition by columns
  on decimal column
  
  Moved DECIMAL types to be disallowed as column types in COLUMNS
  partitioning